--- a/views/home.html
+++ b/views/home.html
@@ -66,10 +66,14 @@
                         </p>
                         <button ng-disabled="HomeCtrl.formSG.$invalid" ng-click="HomeCtrl.getGiphies()">Search Giphy</button>
                     </div>
-                    <div class="user__show_container">
-                        <div class="user__show__views" ng-repeat="giphy in HomeCtrl.giphyList track by giphy.id">
-                            <img class="user__show__views__photo__gifs" ng-class="{borderBlackStyle:HomeCtrl.checkGiphyUser(giphy)}" ng-click="HomeCtrl.addGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                    <div class="user__show__container--general">
+                        <div class="type__change--left"><img src="/img/flecha-left.png"></div>
+                        <div class="user__show__container">
+                            <div class="user__show__views" ng-repeat="giphy in HomeCtrl.giphyList track by giphy.id">
+                                <img class="user__show__views__photo__gifs" ng-class="{borderBlackStyle:HomeCtrl.checkGiphyUser(giphy)}" ng-click="HomeCtrl.addGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                            </div>
                         </div>
+                        <div class="type__change--right"><img src="../img/flecha-right.png"></div>
                     </div>
                 </div>
                 <!-- Container Marvel -->
@@ -89,10 +93,12 @@
                         </form>
                         <button ng-disabled="HomeCtrl.formSM.$invalid" ng-click="HomeCtrl.getMarvel()">Search Marvel</button>
                     </div>
-                    <div class="user__show_container__marvel">
+                    <div class="user__show__container__marvel">
+                        <div class="type__change--left"><img src="/img/flecha-left.png"></div>
                         <div class="user__show__views__marvel" ng-repeat="marvel in HomeCtrl.marvelList track by marvel.id">
                             <img class="user__show__views__photo__marvel" ng-class="{borderBlackStyle:HomeCtrl.checkMarvelUser(marvel)}" ng-click="HomeCtrl.addMarvelFav(marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
                         </div>
+                        <div class="type__change--right"><img src="../img/flecha-right.png"></div>
                     </div>
                 </div>
                 <!-- Container button Create and Modify -->
