--- a/views/user.html
+++ b/views/user.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-cloak>
     <div class="row">
         <div class="col-md-4 col-lg-4">
             <div class="agend__user__data__personal__container">
