se ha añadido la ruta para acceder a los datos del usuario cuando se presiona sobre el icono ver de la tarjeta del usuario

--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
                             <b>Email:</b> {{user.email}}</p>
                         </p>
                         <div class="user__prev__data_button">
-                            <button ng-click="HomeCtrl.showUser(user.id)"><img src="/img/show.png"></button>
+                            <button ng-click="HomeCtrl.go(user.id)"><img src="/img/show.png"></button>
                             <button ng-click="HomeCtrl.editUser(user.id)"><img src="/img/edit.png"></button>
                             <button ng-click="HomeCtrl.removeUser(user)"><img src="/img/delete.png"></button>
                         </div>
