--- a/css/home.css
+++ b/css/home.css
@@ -1,72 +1,96 @@
 /*_____USER_____*/
 .container__user{
     width: 100%;
-    height: 800px;
+    max-height: 1000px;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgba(128, 255, 0, 0.4);
-    background-color: rgba(156, 205, 50, 0.4);
     overflow: scroll;
-}
-.user{
-    margin: 35px;
-    padding: 20px;
-    max-width: 600px;
-    max-height: 300px;
-    border: 3px ridge rgba(165, 42, 42, 0.5);
-    background-color: rgba(247, 169, 81, 0.555);
-    border-radius: 9px 9px 9px 9px;
-    display: flex;
     flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-}
-.user__photo{
-    margin: 5px;
-    max-width: 200px;
-    max-height: 200px;
-}
-.user__photo img{
-    width: 150px;
-    height: 150px;
-    object-fit: contain;
-    border-radius: 50%;
-    border: 1px ridge rgba(165, 42, 42, 0.5);
-    background-color: white;
+    justify-content: space-between;
 }
 .user__prev{
+    margin: 10px;
+    padding: 10px;
     width: 300px;
-    margin: 5px;
+    height: 150px;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
-    align-items: space-between;
+    box-sizing: content-box;
+    border: 5px solid white;
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 4px 4px rgba(0,0,0,.3);
+}
+.user__photo__1{
+    width: 90px;
+    height: 70px;
+    margin: auto;
+    background-color: rgb(169, 224, 18);
+    -webkit-transform: rotate(7deg);
+}
+.user__photo__2{
+    width: 90px;
+    height: 70px;
+    margin: auto;
+    background-color: rgb(31, 122, 207);
+    -webkit-transform: rotate(-7deg);
+}
+.user__photo__img{
+    width: 90px;
+    height: 70px;
+    display: block;
+    object-fit: cover;
+    background-color: white;
+    -webkit-transform: rotate(-7deg);
+}
+.user__prev__name{
+    width: 210px;
+    font-size: 20px;
+    color: white;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
 }
 .user__prev__data{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    padding: 10px;
+    width: 200px;
+    height: 80px;
+    margin: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-end;
 }
-.user__prev__data p{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 100;
-    text-align: left;
-}
-.user__prev__data_button{
+.user__prev__data__{
+    width: 400px;
     display: inline-flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
     align-items: center;
-    align-self: center;
-    height: 50px;
+    color: white;
 }
-.user__prev__data_button button{
+.user__prev__data div img{
+    width: 25px;
+    height: 25px;
+    display: block;
+    object-fit: cover;
+    margin-right: 10px;
+}
+.user__prev__button{
+    width: 100px;
+    height: 80px;
+    display: inline-flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+.user__prev__button button{
     background-color: transparent;
     border-width: 0px;
 }
-.user__prev__data_button button img{
-    object-fit: contain;
+.user__prev__button button img{
+    width: 33px;
+    object-fit: cover;
 }
 /*_____NAV BAR____*/
 .nav__bar{
