--- a/views/home.html
+++ b/views/home.html
@@ -5,22 +5,23 @@
 <div class="container-fluid" ng-cloak>
     <div class="row">
         <div class="col-md-5 col-lg-5">
+            <!-- Container User Card -->
             <div class="container__user">
-                <div class="user" ng-repeat="user in HomeCtrl.usersList track by user.id">
-                    <div class="user__photo">
-                        <img ng-click="HomeCtrl.go(user.id)" ng-src="{{user.photo}}" onerror="this.src='/img/no_image.png'">
-                    </div>
-                    <div class="user__prev">
-                        <p class="user__prev__data">
-                            <p><b>Name:</b> {{user.name}}<br>
-                            <b>Phone:</b> {{user.phone}}<br>
-                            <b>Email:</b> {{user.email}}</p>
-                        </p>
-                        <div class="user__prev__data_button">
-                            <button ng-click="HomeCtrl.go(user.id)"><img src="/img/show.png"></button>
-                            <button ng-click="HomeCtrl.editUser(user.id)"><img src="/img/edit.png"></button>
-                            <button ng-click="HomeCtrl.removeUser(user)"><img src="/img/delete.png"></button>
+                <div class="user__prev" ng-repeat="user in HomeCtrl.usersList track by user.id">
+                    <div class="user__photo__1">
+                        <div class="user__photo__2">
+                            <img class="user__photo__img" ng-click="HomeCtrl.go(user.id)" ng-src="{{user.photo}}" onerror="this.src='/img/no_image.png'">
                         </div>
+                    </div>
+                    <div class="user__prev__name">{{user.name}}</div>
+                    <div class="user__prev__data">
+                        <div class="user__prev__data__"><img src="../img/tlf.png"> {{user.phone}} </div>
+                        <div class="user__prev__data__"><img src="../img/email.png"> {{user.email}} </div>
+                    </div>
+                    <div class="user__prev__button">
+                        <button ng-click="HomeCtrl.go(user.id)"><img src="/img/show.png"></button>
+                        <button ng-click="HomeCtrl.editUser(user.id)"><img src="/img/edit.png"></button>
+                        <button ng-click="HomeCtrl.removeUser(user)"><img src="/img/delete.png"></button>
                     </div>
                 </div>
             </div>
@@ -39,9 +40,9 @@
                     <div class="newUser" ng-model-options="{allowInvalid: true, debounce: 200}">
                         <form name="HomeCtrl.formUser" ng-model="HomeCtrl.formUser" class="newUser__form" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
                             <h3>Name: </h3>
-                            <input name="HomeCtrl.Name" placeholder="Name user" type="text" ng-required="true" ng-model="HomeCtrl.user.name" ng-minlength="3" ng-maxlength="15" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                            <input name="HomeCtrl.Name" placeholder="Name user" type="text" ng-required="true" ng-model="HomeCtrl.user.name" ng-minlength="3" ng-maxlength="10" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
                             <h3>E-mail: </h3>
-                            <input name="HomeCtrl.Email" placeholder="Email user" type="email" ng-required="true" ng-model="HomeCtrl.user.email" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                            <input name="HomeCtrl.Email" placeholder="Email user" type="email" ng-required="true" ng-model="HomeCtrl.user.email" ng-maxlength="20" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
                             <h3>Phone: </h3>
                             <input name="HomeCtrl.Phone" placeholder="Phone user" type="number" ng-required="true" ng-model="HomeCtrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
                             <h3>Photo: </h3>
