--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
     display: flex;
     overflow: scroll;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .user__prev{
     margin: 10px;
@@ -16,9 +16,9 @@
     flex-flow: row wrap;
     justify-content: space-between;
     box-sizing: content-box;
-    border: 5px solid white;
-    background-color: rgba(0, 0, 0, 0.7);
-    box-shadow: 0 0 4px 4px rgba(0,0,0,.3);
+    border: 4px solid white;
+    background-color: rgba(209, 144, 14, 0.6);
+    box-shadow: 0 0 4px 4px rgba(0,0,0,0.3);
 }
 .user__photo__1{
     width: 90px;
