--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid" ng-cloak>
     <div class="row">
-        <div class="col-md-5 col-lg-5">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <!-- Container User Card -->
             <div class="container__user">
                 <div class="user__prev" ng-repeat="user in HomeCtrl.usersList track by user.id">
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-7 col-lg-7">
+        <div class="col-sx-12 col-sm-12 col-md-6 col-lg-6">
             <div class="container__R">
                 <div class="nav__bar">
                     <ul>
