--- a/views/home.html
+++ b/views/home.html
@@ -36,22 +36,20 @@
                     </ul>
                 </div>
                 <!-- Container User Perfil -->
-                <div class="user__container" ng-show="HomeCtrl.showView == 0" ng-hide="HomeCtrl.showView != 0">
-                    <div class="newUser" ng-model-options="{allowInvalid: true, debounce: 200}">
-                        <form name="HomeCtrl.formUser" ng-model="HomeCtrl.formUser" class="newUser__form" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                            <h3>Name: </h3>
-                            <input name="HomeCtrl.Name" placeholder="Name user" type="text" ng-required="true" ng-model="HomeCtrl.user.name" ng-minlength="3" ng-maxlength="10" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                            <h3>E-mail: </h3>
-                            <input name="HomeCtrl.Email" placeholder="Email user" type="email" ng-required="true" ng-model="HomeCtrl.user.email" ng-maxlength="20" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                            <h3>Phone: </h3>
-                            <input name="HomeCtrl.Phone" placeholder="Phone user" type="number" ng-required="true" ng-model="HomeCtrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                            <h3>Photo: </h3>
-                            <input name="HomeCtrl.Photo" placeholder="Photo user" type="text" ng-required="true" ng-model="HomeCtrl.user.photo" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        </form>
-                    </div>
+                <div class="user__container" ng-show="HomeCtrl.showView == 0" ng-model-options="{allowInvalid: true, debounce: 200}" ng-cloak>
+                    <form name="HomeCtrl.formUser" class="newUser__form" ng-model="HomeCtrl.formUser" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                        <h3>Name: </h3>
+                        <input type="text" placeholder="Name user" ng-required="true" ng-model="HomeCtrl.user.name" ng-minlength="3" ng-maxlength="10" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                        <h3>E-mail: </h3>
+                        <input type="email" placeholder="Email user" ng-required="true" ng-model="HomeCtrl.user.email" ng-maxlength="20" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                        <h3>Phone: </h3>
+                        <input type="number" placeholder="Phone user" ng-required="true" ng-model="HomeCtrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                        <h3>Photo: </h3>
+                        <input type="text" placeholder="Photo user" ng-required="true" ng-model="HomeCtrl.user.photo" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                    </form>
                 </div>
                 <!-- Container Gifs -->
-                <div class="user__container" ng-show="HomeCtrl.showView == 1" ng-hide="HomeCtrl.showView != 1">
+                <div class="gifs__container" ng-show="HomeCtrl.showView == 1">
                     <div class="user__favourite__container">
                         <div class="user__favourite" ng-repeat="giphy in HomeCtrl.user.giphy track by giphy.id">
                             <img class="user__favourite__photo" ng-click="HomeCtrl.deleteGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
@@ -104,8 +102,8 @@
                 </div>
                 <!-- Container button Create and Modify -->
                 <div class="button__Create__Modify__User">
-                        <button ng-if="!HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-click="HomeCtrl.addNewUser()">Create</button>
-                        <button ng-if="HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-click="HomeCtrl.modifyUser()">Modify</button>
+                        <button ng-if="!HomeCtrl.edit" ng-disabled="HomeCtrl.formUser.$invalid" ng-class="{borderGreenStyle:HomeCtrl.formUser.$valid}" ng-click="HomeCtrl.addNewUser()">Create</button>
+                        <button ng-if="HomeCtrl.edit" ng-disabled="HomeCtrl.formUser.$invalid" ng-class="{borderGreenStyle:HomeCtrl.formUser.$valid}" ng-click="HomeCtrl.modifyUser()">Modify</button>
                 </div>
             </div>
         </div>
